fix letter spacing

--- a/templates/HomePage/Collections/Collection/Collection.module.sass
+++ b/templates/HomePage/Collections/Collection/Collection.module.sass
@@ -71,7 +71,7 @@
     font-size: 18px
     font-weight: 500
     line-height: -5px
-    letter-spacing: -5%
+    letter-spacing: -0.05em
     text-align: left
     white-space: nowrap
     overflow: hidden
@@ -86,7 +86,7 @@
     font-size: 16px
     font-weight: 500
     line-height: -5px
-    letter-spacing: -5%
+    letter-spacing: -0.05em
     text-align: left
     white-space: nowrap
     overflow: hidden
@@ -105,7 +105,7 @@
     font-size: 16px
     font-weight: 500
     line-height: -5px
-    letter-spacing: -5%
+    letter-spacing: -0.05em
     text-align: right
     margin-bottom: rem(4)
     +d
@@ -116,5 +116,5 @@
     font-size: 16px
     font-weight: 500
     line-height: -5px
-    letter-spacing: -5%
+    letter-spacing: -0.05em
     text-align: right
